--- a/styles/light/syntax-variables.less
+++ b/styles/light/syntax-variables.less
@@ -3,26 +3,26 @@
 //Original Author: Atelierbram - adapted from: Simurai (https://github.com/simurai/duotone-dark-syntax/)
 
 // General colors
-@syntax-text-color:                         @base2tone-color-baseC4;
+@syntax-text-color:                         @base2tone-color-baseC2;
 @syntax-cursor-color:                       @base2tone-color-baseD2;
 @syntax-selection-color:                    @base2tone-color-baseC5;
-@syntax-selection-flash-color:              @base2tone-color-baseC4;
+@syntax-selection-flash-color:              @syntax-text-color;
 @syntax-background-color:                   @base2tone-color-baseC7;
 
 // Guide colors
-@syntax-wrap-guide-color:                   @base2tone-color-baseC7;
-@syntax-indent-guide-color:                 @base2tone-color-baseC7;
-@syntax-invisible-character-color:          @base2tone-color-baseC7;
+@syntax-wrap-guide-color:                   @syntax-selection-color;
+@syntax-indent-guide-color:                 @base2tone-color-baseC6;
+@syntax-invisible-character-color:          @syntax-indent-guide-color;
 
 // For find and replace markers
-@syntax-result-marker-color:                @base2tone-color-baseC5;
-@syntax-result-marker-color-selected:       @base2tone-color-baseC4;
+@syntax-result-marker-color:                @syntax-selection-color;
+@syntax-result-marker-color-selected:       @syntax-text-color;
 
 // Gutter colors
-@syntax-gutter-text-color:                  @base2tone-color-baseC6;
-@syntax-gutter-text-color-selected:         @base2tone-color-baseC6;
-@syntax-gutter-background-color:            @base2tone-color-baseC7;
-@syntax-gutter-background-color-selected:   @base2tone-color-baseC7;
+@syntax-gutter-text-color:                  @base2tone-color-baseC3;
+@syntax-gutter-text-color-selected:         @base2tone-color-baseC0;
+@syntax-gutter-background-color:            if(@base2tone-contrastGutter, @syntax-indent-guide-color, @syntax-background-color);
+@syntax-gutter-background-color-selected:   @syntax-gutter-background-color;
 
 // For git diff info. i.e. in the gutter
 @syntax-color-renamed:                      hsl(hue(blue), saturation(@syntax-cursor-color), lightness(@syntax-cursor-color));
